// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mapWeaponSkillToMessage > with weapon type and unique usages 1`] = `
{
  "reply": {
    "embed": {
      "description": "**Effect**: Deals more damage to Armored units.
**Weapons**: Royal Sword, level 5 Swords.",
      "title": "Armor Bane 2",
    },
  },
}
`;

exports[`mapWeaponSkillToMessage > without usages 1`] = `
{
  "reply": {
    "embed": {
      "description": "**Effect**: Deals more damage to Armored units.
**Weapons**: .",
      "title": "Armor Bane 2",
    },
  },
}
`;
